Fixed bootstrap collapse bug

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,9 @@ body {
     box-shadow: 0 5px 5px 0 rgba(0,0,0,0.15);
     text-shadow: 1px 1px #000;
 }
+.navbar-collapse.collapse.in {
+    display: block!important;
+}
 .img-banner {
     background-color: #2196F3;
 }
@@ -45,9 +48,9 @@ p {
     -webkit-transition: all .4s ease;
 }
 .body-container {
-        display: table;
-        width: 100%;
-        background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) );
+    display: table;
+    width: 100%;
+    background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) );
 }
 .email-nav {
     text-decoration: none !important;
